# OVATool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ovatool-cli/: Cargo.toml
crates/ovatool-cli/src/: main.rs
crates/ovatool-core/: Cargo.toml
crates/ovatool-core/src/: error.rs  export.rs  lib.rs  ova.rs  ovf.rs  pipeline.rs  vmx.rs
crates/ovatool-core/src/vmdk/: descriptor.rs  mod.rs  reader.rs  sparse.rs  stream.rs
crates/ovatool-core/tests/: TESTING.md  integration_test.rs  ova_test.rs  ovf_test.rs  pipeline_test.rs  vmdk_descriptor_test.rs  vmdk_reader_test.rs  vmdk_stream_test.rs  vmx_test.rs
crates/ovatool-core/tests/fixtures/: test.vmx
crates/ovatool-core/tests/fixtures/test-vm/: test.vmdk  test.vmx
docs/plans/: 2026-02-03-ovatool-design.md  2026-02-03-ovatool-implementation.md
