[workspace]
resolver = "2"
members = ["crates/ovatool-core", "crates/ovatool-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Steven"]
license = "MIT"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
rayon = "1.10"
crossbeam-channel = "0.5"
flate2 = "1.0"
sha2 = "0.10"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
quick-xml = "0.37"
tempfile = "3"

# Internal crates
ovatool-core = { path = "crates/ovatool-core" }
