[package]
name = "ovatool-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for VMware VM to OVA export"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
flate2.workspace = true
sha2.workspace = true
memmap2.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tempfile.workspace = true
